internal/render/testdata/sonarr/k8s/play/sonarr/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8989
