internal/render/testdata/sonarr/k8s/play/sonarr/base/statefulset.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - name: sonarr
          image: docker.io/linuxserver/sonarr:4.0.15.2941-ls285
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
